--- a/server-admin/src/main/resources/application-dev.properties
+++ b/server-admin/src/main/resources/application-dev.properties
@@ -25,7 +25,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 # \u6570\u636E\u6E90\u540D\u79F0
 spring.datasource.name=defaultDataSource
 # \u6570\u636E\u5E93\u8FDE\u63A5\u5730\u5740
-spring.datasource.url=jdbc:mysql://localhost:3306/nacos_config?characterEncoding=UTF-8&useUnicode=true&useSSL=false&tinyInt1isBit=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
+spring.datasource.url=jdbc:mysql://localhost:3306/nice_config?characterEncoding=UTF-8&useUnicode=true&useSSL=false&tinyInt1isBit=false&allowPublicKeyRetrieval=true&serverTimezone=Asia/Shanghai
 # \u6570\u636E\u5E93\u7528\u6237\u540D&\u5BC6\u7801\uFF1A
 spring.datasource.username=root
 spring.datasource.password=123456
@@ -56,3 +56,5 @@ seata.config.nacos.username=nacos
 seata.config.nacos.password=nacos
 
 spring.cloud.alibaba.seata.tx-service-group=nice-service-seata-service-group
+
+spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
