--- a/server-system/src/main/resources/application-dev.properties
+++ b/server-system/src/main/resources/application-dev.properties
@@ -1,7 +1,9 @@
 #\u670D\u52A1\u540D
-spring.application.name = server-admin
+spring.application.name = server-system
 #\u670D\u52A1\u8BBF\u95EE\u7AEF\u53E3
 server.port=8080
+
+spring.devtools.restart.enabled=true
 
 #nacos
 spring.cloud.nacos.config.username=nacos
