--- a/server-gateway/src/main/resources/application-dev.properties
+++ b/server-gateway/src/main/resources/application-dev.properties
@@ -28,7 +28,7 @@ spring.cloud.sentinel.transport.dashboard=localhost:8858
 
 #\u7B2C\u4E00\u4E2A\u670D\u52A1\u8DF3\u8F6C
 spring.cloud.gateway.routes[0].id = admin-route
-spring.cloud.gateway.routes[0].uri = lb://server-admin:8080/
+spring.cloud.gateway.routes[0].uri = lb://server-system:8080/
 spring.cloud.gateway.routes[0].predicates[0] = Path=/admin/**
 
 management.endpoints.web.exposure.include=*
